# cudars

./: .gitignore  CMakeLists.txt  README.md
app/: fullBBTransl.cpp  gpu_fullArsIsoMpeg7.cu  gpu_fullArsIsoPcl.cu  gpu_fullArsIsoPoseMpeg7.cu  gpu_testArsIsoMpeg7.cu  gpu_testIsotropicArs.cu
cfg/: gpu_fullArsIsoPoseMpeg7.cfg  gpu_testPoseMpeg7.cfg  gpu_testPosePcl.cfg
cmake_modules/: cudarsConfig.cmake
include/: IntervalIndices.cuh
include/ars/: ArsKernelAnisotropic2d.h  ArsKernelIsotropic2d.h  ConsensusTranslationEstimator.cuh  ConsensusTranslationEstimator.h  ConsensusTranslationEstimator_old.h  GaussianMixtureEstimator.h  Grid.cuh  HoughSpectrum.h  MortonOctree.h  MortonOrderedPoints.h  ParamMap.h  ars2d.cuh  ars2d.h  ars2d_old.h  definitions.h  functions.h  mpeg7RW.h  mpeg7_io.h  utils.h
include/cudars/: ArsKernelAnisotropic2d.h  ArsKernelIsotropic2d.h  BBOptimizer1d.h  BBTranslation.cuh  BBTranslation.h  Box.h  ConsensusTranslationEstimator.cuh  ConsensusTranslationEstimator.h  ConsensusTranslationEstimator_old.h  CuBox.cuh  DisjointSet.h  GaussianMixtureEstimator.h  Grid.cuh  HistogramCircularCorrelation.h  HoughSpectrum.h  IntervalIndices.cuh  MortonOctree.h  MortonOrderedPoints.h  MortonSort.h  ParamMap.h  Profiler.h  ars2d.cuh  ars2d.h  ars2d_old.h  definitions.h  functions.h  mpeg7RW.h  mpeg7_io.h  niars2d.cuh  prioqueue.cuh  prioqueue.h  procrustes_umeyama.h  tls_scalar_consensus.cuh  tls_scalar_consensus.h  utils.h
run/: multiple_exec_helper.py
src/: ArsKernelAnisotropic2d.cpp  ArsKernelIsotropic2d.cpp  BBOptimizer1d.cpp  BBTranslation.cpp  BBTranslation.cu  Box.cpp  CuBox.cu  DisjointSet.cpp  GaussianMixtureEstimator.cpp  HistogramCircularCorrelation.cpp  HoughSpectrum.cpp  MortonOrderedPoints.cpp  MortonSort.cpp  ParamMap.cpp  Profiler.cpp  ars2d.cpp  ars2d.cu  definitions.cpp  functions.cpp  mpeg7RW.cpp  mpeg7_io.cpp  prioqueue.cpp  prioqueue.cu  procrustes_umeyama.cpp  utils.cpp
test/: gpu_testAnisotropicArs.cu  gpu_testArsIsoMpeg7.cu  gpu_testArsIsoPcl.cu  gpu_testArsIsoPoseMpeg7.cu  gpu_testArsIsoPosePcl.cu  gpu_testBBTransl.cu  gpu_testConsensusTranslationEstimator.cu  gpu_testIsotropicArs.cu  gpu_testPoseMpeg7.cu  testAnisotropicArs.cpp  testAnisotropicKernel.cpp  testBBTransl.cpp  testConsensusTranslationEstimator.cpp  testCorrelationArs.cpp  testFunctions.cpp  testGaussianMixtureEstimator.cpp  testIsotropicArs.cpp  testMortonOrderedPoints.cpp  testPrioqueue.cpp  testPrioqueueBox.cpp  testPrioqueueBox.cu  testProcrustes.cpp  testTlsScalarCons.cu
